--- a/chart/package.json
+++ b/chart/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.9.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.35.3",
     "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-blur": "^1.1.1",
