--- a/chart/package.json
+++ b/chart/package.json
@@ -12,10 +12,12 @@
     "apexcharts": "^3.35.3",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-blur": "^1.1.1",
     "react-dom": "^18.2.0",
+    "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.12",
